[package]
name = "classical_solver"
version = "0.1.0"
authors = ["yozu <yasuo@ozu.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annealers = { path = "../annealers" }
rand = { version = "0.7.3", features = ["small_rng"] }
